# vTravelTourAppSem22026

./: .gitignore  Dest_Forecasting_Data_Get.py  Dockerfile.fastapi  README.md  app.py  arima_model.py  docker-compose.yml  knn_model.py  main.py  pyproject.toml  requirements.txt  weather_req_holiday.py
.github/workflows/: sync-branches.yml
backend/: Dockerfile.fastapi  app.py  arima_model.py  main.py  pyproject.toml
backend/datasets/: flight_paths.csv
dataset/Crowd/: crowd_desnity_ARMIA_Tourism_Forecast.ipynb  user_KNN_Tourism_Recommendation.ipynb  v5_ETL_Pipeline_Main_Dataset.ipynb
dataset/Crowd/Flight/: flight_booking_collector_serpAPI.ipynb  major_international_airports_clean.csv
dataset/Crowd/data_weather/: Global_Tourist_Attractions.csv
dataset/Crowd/data_weather/Auckland Data/: AUK-pds-Day-by-hour-2025.csv
dataset/Crowd/data_weather/Dublin/: DUB-pds-Jan-to-Dec-2025.csv
dataset/Crowd/data_weather/Final/: Auckland_Pedestrian_daily.csv  Dublin_Pedestrian_daily.csv
frontend/: Dest_Forecasting_Data_Get.py  Dockerfile.ui  app.py  poisUpdate.py  requirements.txt
models/: loc_knn.pkl
