[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.127.0",
    "holidays>=0.90",
    "numpy>=2.2.6",
    "openmeteo-requests>=1.7.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "requests-cache>=1.3.0",
    "retry-requests>=2.0.0",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6",
    "uvicorn[standard]>=0.40.0",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.0",
]
